--- a/package.json
+++ b/package.json
@@ -10,17 +10,9 @@
 	},
 	"scripts": {
 		"build:weapp": "taro build --type weapp",
-		"build:swan": "taro build --type swan",
-		"build:alipay": "taro build --type alipay",
-		"build:tt": "taro build --type tt",
-		"build:h5": "cross-env CLIENT_ENV=h5 taro build --type h5",
-		"build:rn": "cross-env CLIENT_ENV=rn taro build --type rn",
+		"build:quickapp": "taro build --type quickapp",
 		"dev:weapp": "npm run build:weapp -- --watch",
-		"dev:swan": "npm run build:swan -- --watch",
-		"dev:alipay": "npm run build:alipay -- --watch",
-		"dev:tt": "npm run build:tt -- --watch",
-		"dev:h5": "cross-env CLIENT_ENV=h5 npm run build:h5 -- --watch",
-		"dev:rn": "cross-env CLIENT_ENV=rn npm run build:rn -- --watch"
+		"dev:quickapp": "npm run build:quickapp -- --watch"
 	},
 	"author": "",
 	"license": "MIT",
